Closed Bug 1411143 Opened 8 years ago Closed 8 years ago

stylo: Assertion failure: mExtraData->GetReferrer(), at /builds/worker/workspace/build/src/layout/style/ServoBindings.cpp:1501

Categories

(Core :: CSS Parsing and Computation, defect, P3)

58 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox56 --- disabled
firefox57 --- wontfix
firefox58 --- fixed

People

(Reporter: jkratzer, Assigned: xidorn)

References

(Blocks 2 open bugs)

Details

(Keywords: assertion, testcase)

Attachments

(5 files)

Attached file trigger.html
Testcase found while fuzzing mozilla-central rev 0bd9b61304e2.
Flags: in-testsuite?
Attached file log_minidump.txt
Attached file log_stderr.txt
Taking for investigating.
Assignee: nobody → xidorn+moz
Attached file simplified testcase
This is a simplified testcase. So the problem here is that, the stylesheet has a content-type of image/png, which means we would refuse to load it, and thus it is a fail-to-load stylesheet. IIRC we create some dummy url data for such stylesheet, which may lead to this.
Version: unspecified → 58 Branch
Has Regression Range: --- → no
Priority: -- → P3
Comment on attachment 8921374 [details] Bug 1411143 - Give dummy URL extra data a dummy referrer rather than null. https://reviewboard.mozilla.org/r/192392/#review197834
Attachment #8921374 - Flags: review?(bzbarsky) → review+
Pushed by xquan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0adee90257d8 Give dummy URL extra data a dummy referrer rather than null. r=bz
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: