Bug 1411143 - Give dummy URL extra data a dummy referrer rather than null. r=bz

MozReview-Commit-ID: GV07RBocNnH